<resources>
    <string name="app_name">Hack</string>
    <string name="web_client_id">98006081024-ut1ktdr07mkfk1l6qd7rlhpll0m8l3k8.apps.googleusercontent.com</string>
    <string name="title_activity_login_patient">LoginPatient</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="Influenza">Common cold is one of the most commonly occurring during the monsoon season. It is highly contagious disease due to the spread of virus in the air which infects the upper respiratory tract and thus affects the nose and the throat. Symptoms involve runny or stuffy nose, body ache, throat irritation and soreness and fever. It is always advisable to consult a physician and get the required medicines prescribed for getting cured from the infection
The best way to prevent common cold is to have a healthy, balanced and nutritious diet regular which will develop the immune system of the body and improves the body resistance.
    </string>
    <string name="Cholera">Another most common and deadly bacterial disease that spreads during monsoon is “cholera” This disease is caused by contaminated food and water and also poor hygienic conditions .Common symptoms of cholera are severe diarrhoea with watery stool ’rice water stools” and vomiting which causes immediate water loss and muscle cramps. Diarrhoea can be so severe that it leads within hours to severe dehydration and electrolyte imbalance. A rapid dipstick test is available to determine the presence of V. cholera bacteria from stool sample
Cholera requires immediate treatment because the disease can cause death within hours. The goal is to replace lost fluids and electrolytes using a simple rehydration solution, oral rehydration salts (ORS). The ORS solution is available as a powder that can be reconstituted in boiled or bottled water. Antibiotics are not a necessary part of cholera treatment.
Preventive measures include providing clean drinking water, better sanitation, and better handwashing
    </string>
    <string name="Typhoid">“Typhoid” is another waterborne bacterial infection caused by bacteria called Salmonella. This disease is caused by contaminated food or drinking food or water contaminated with the faeces of an infected person.  Diagnosis is made by any blood, bone marrow or stool cultures and with the Widal test.
Symptoms of the diseases are prolonged high fever, severe abdomen pain, headache; vomits are common symptoms of this disease. The worst part is that the infection of this disease can remain in the gall bladder of the patient even after he/she is cured.
Preventive measures include providing clean drinking water, better sanitation, and better handwashing.
Treatments of typhoid include antibiotics such as azithromycin, fluoroquinolones or third generation cephalosporin.
    </string>
    <string name="facts1">•	Laughing is good for the heart and can increase blood flow by 20 percent.</string>
    <string name="facts2">•	Exercise will give you more energy, even when you’re tired.</string>
    <string name="facts3">•	Sitting and sleeping are great in moderation, but too much can increase your chances of an early death.</string>
    <string name="facts4">•	Learning a new language or playing a musical instrument gives your brain a boost.</string>
    <string name="facts5">•	Drinking coffee can reduce the risk of depression.</string>
    <string name="facts6">•	Yoga can boost your cognitive function and lowers stress.</string>
    <string name="facts7">•	Walking outside – or spending time in green space – can reduce negative thoughts and boost self-esteem.</string>
    <string name="facts8">•	Eating oatmeal provides a serotonin boost to calm the brain and improve your mood.</string>
    <string name="facts9">•	An apple a day does keep the doctor away. Apples can reduce levels of bad cholesterol to keep your heart healthy.</string>
    <string name="facts10">• The amino acid found in eggs can help improve your reflexes.</string>
    <string name="facts11">• Extra virgin olive oil is the healthiest fat on the planet.</string>
    <string name="facts12">• Vitamin D is as important as calcium in determining bone health, and most people don’t get enough of it.</string>
    <string name="facts13">• There are five main components of fitness: the body’s ability to use oxygen, muscular strength, endurance, flexibility and body composition.</string>
    <string name="facts14">• The body has more than 650 muscles.</string>
    <string name="facts15">• To lose one pound of fat, you need to burn roughly 3,500 calories.</string>
    <string name="facts16">• Walking at a fast pace for three hours or more at least one time a week, you can reduce your risk of heart disease by up to 65%.</string>
    <string name="facts17">• Even at rest, muscle is three times more efficient at burning calories than fat.</string>
    <string name="facts18">• Running is good for you. People who run 12-18 miles a week have a stronger immune system and can increase their bone mineral density.</string>
    <string name="facts19">• Stretching increases the blood flow to your muscles and helps avoid injuries.</string>
    <string name="facts20">• Drinking at least five glasses of water a day can reduce your chances of suffering from a heart attack by 40%.</string>
    <string name="facts21">• Consuming water helps the body maintain its natural pH balance. </string>
    <string name="facts22">• Kidneys filter your blood up to 300 times a day and need water to function optimally. </string>
    <string name="facts23">• A lack of water can cause a range of problems, such as asthma, allergy and migraines.</string>
    <string name="facts24">• Your muscles and joints require water in order to stay energized, lubricated and healthy. </string>
    <string name="facts25">• Brushing teeth too soon after eating or drinking can soften the tooth enamel, especially if you’ve just been eating or drinking acidic foods.</string>
    <string name="facts26">• Cardio exercise before breakfast can burn more fat. </string>
    <string name="facts27">• Breathing deeply in moments of stress, or anytime during the day, brings many benefits such as better circulation, decreased anxiety and reduced blood pressure. </string>
    <string name="facts28">• On average, there are more bacteria per square inch in a kitchen sink than the bathroom. </string>
    <string name="facts29">• During an allergic reaction your immune system is responding to a false alarm that it perceives as a threat. </string>
    <string name="facts30">• The eye muscles are the most active in the body, moving more than 100,000 times a day!</string>
    <string name="facts31">• Humans can cough at 60 miles an hour and sneezes can be 100 miles an hour – which is faster than the average car!</string>
    <string name="facts32">• The soles of your feet contain more sweat glands and nerve endings per square inch than anywhere else on your body. </string>
    <string name="facts33">• People need 8+ hours of sleep per night for their bodies to function properly. </string>
    <string name="facts34">• Physical activity like aerobic exercise (walking, running), muscle-strengthening (weight-lifting), bone-strengthening (jumping rope), and balance and stretching activities (yoga, pilates, dancing) are especially beneficial to a healthy body.</string>
    <string name="facts35">• Breakfast is the most important meal of the day because it feeds your body and mind with the necessary nutrients and energy to function throughout the day. </string>
    <string name="facts36">• Over 30% of cancer could be prevented by avoiding tobacco and alcohol, having a healthy diet and physical activity.</string>
    <string name="facts37">• Sitting At A Desk Can Increase Death Risk By Almost 50 Percent.</string>
    <string name="Lakshdweep">Asthma is a condition in which your airways narrow and swell and produce extra mucus. This can make breathing difficult and trigger coughing, wheezing and shortness of breath.
Asthma symptoms vary from person to person. You may have infrequent asthma attacks, have symptoms only at certain times — such as when exercising — or have symptoms all the time.
</string>
    <string name="Lakshdweep1">Asthma signs and symptoms include:</string>
    <string name="Lakshdweep2">1.Shortness of breath</string>
    <string name="Lakshdweep3">2.Chest tightness or pain</string>
    <string name="Lakshdweep4">3.Trouble sleeping caused by shortness of breath, coughing or wheezing</string>
    <string name="Lakshdweep5">4.A whistling or wheezing sound when exhaling (wheezing is a common sign of asthma in children)</string>
    <string name="Lakshdweep6">5.Coughing or wheezing attacks that are worsened by a respiratory virus, such as a cold or the flu</string>
    <string name="Lakshdweep7">Signs that your asthma is probably worsening include:</string>
    <string name="Lakshdweep8">1.Asthma signs and symptoms that are more frequent and bothersome</string>
    <string name="Lakshdweep9">2.Increasing difficulty breathing (measurable with a peak flow meter, a device used to check how well your lungs are working)</string>
    <string name="Lakshdweep10">3.The need to use a quick-relief inhaler more often</string>
    <string name="Lakshdweep11"> play two roles in your immune system:</string>
    <string name="Lakshdweep12">1. Destroying foreign substances. Eosinophils can consume foreign substances. For example, they fight substances related to parasitic infection that have been flagged for destruction by your immune system.
</string>
    <string name="Lakshdweep13">2. Regulating inflammation. Eosinophils help promote inflammation, which plays a beneficial role in isolating and controlling a disease site. But sometimes inflammation may be greater than is necessary, which can lead to troublesome symptoms or even tissue damage. For example, eosinophils play a key role in the symptoms of asthma and allergies, such as hay fever. Other immune system disorders also can contribute to ongoing (chronic) inflammation.
</string>
    <string name="Lakshdweep14">Eosinophilia occurs when a large number of eosinophils are recruited to a specific site in your body or when the bone marrow produces too many eosinophils. This can be caused by a variety of factors, including:</string>
    <string name="Lakshdweep15">1.Parasitic and fungal diseases</string>
    <string name="Lakshdweep16">2.Allergies including allergies to medications or food</string>
    <string name="Lakshdweep17">3.Adrenal conditions</string>
    <string name="Lakshdweep18">4.Skin disorders</string>
    <string name="Lakshdweep19">5.Toxins</string>
    <string name="Lakshdweep20">6.Autoimmune disorders</string>
    <string name="Lakshdweep21">7.Endocrine disorders</string>
    <string name="Lakshdweep22">8.Tumors</string>
    <string name="Lakshdweep23">Amoebiasis is a common cause of diarrhoea in infants in low-income countries. Amoebiasis also causes colitis that can present with diarrhoea and/or dysentery that can be acute or last more than 1 week. Abdominal tenderness and weight loss are common with amoebic colitis.
Amoebic liver abscess presents with right upper quadrant pain. May not present with diarrhoea, but will usually have a preceding history of diarrhoea.
Rare cause of brain abscess.
Most patients will have travelled to or resided in an endemic area in the 12 months preceding presentation.
Diagnosis is confirmed by detection of Entamoeba histolytica antigen or DNA in stool or antibodies against the parasite in serum.
Treatment is with nitroimidazoles (including metronidazole or tinidazole) followed by luminal agents such as paromomycin or diloxanide furoate to prevent relapse.
</string>
    <string name="title_notifications">Profile</string>
</resources>